lib_LTLIBRARIES = libcntlm.la
libcntlm_la_SOURCES =	acl.c \
		     			acl.h \
				     	auth.c \
				     	auth.h \
						conf.c \
						conf.h \
		     			direct.c \
				     	direct.h \
				     	forward.c \
						forward.h \
						globals.h \
						http.c \
						http.h \
				    	ntlm.c \
						ntlm.h \
						pages.c \
						pages.h \
						scanner.c \
						scanner.h \
						socket.c \
						socket.h \
						swap.h \
						utils.c \
						utils.h \
						xcrypt.c \
						xcrypt.h

