lib_LTLIBRARIES = 	libcntlm.la
libcntlm_includedir = $(includedir)/libcntlm
libcntlm_include_HEADERS = 	acl.h \
			auth.h \
			conf.h \
			cntlm.h \
			direct.h \
			forward.h \
			globals.h \
			http.h \
			ntlm.h \
			pages.h \
			scanner.h \
			socket.h \
			swap.h \
			utils.h \
			xcrypt.h
libcntlm_la_SOURCES =	acl.c \
			auth.c \
			conf.c \
			direct.c \
			forward.c \
			http.c \
			ntlm.c \
			pages.c \
			scanner.c \
			socket.c \
			utils.c \
			xcrypt.c

LDADD = libcntlm.la
