lib_LTLIBRARIES = 	libcntlm.la
libcntlm_includedir = $(includedir)/libcntlm
libcntlm_include_HEADERS = \
			auth.h \
			cntlm.h \
			ntlm.h \
			socket.h \
			swap.h \
			utils.h \
			xcrypt.h
libcntlm_la_SOURCES = \
			auth.c \
			ntlm.c \
			socket.c \
			utils.c \
			xcrypt.c

LDADD = libcntlm.la
